[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Eruditis", email = "inc@eruditis.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "marketanalysis @ git+https://github.com/Eruditis/marketanalysis@main",
    "pyyaml>=5.4.1",
    "hypothesis>=6.82.6",
]
requires-python = ">=3.11,<3.11.4"
readme = "README.md"
license = {text = "MIT"}

