[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Eruditis", email = "inc@eruditis.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "marketanalysis @ git+https://github.com/Eruditis/marketanalysis@main",
    "pyyaml>=5.4.1",
    "hypothesis>=6.82.6",
    "aider-chat>=0.15.0",
    "click>=8.1.7",
    "black>=23.10.1",
]
requires-python = ">=3.11.1,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.dev-dependencies]
pytest = "^6.2.2"
nox = "^2021.6.12"

